assets/scss/main.sass
/* ... */
    background: nth($meterbg-list,$i)
  meter[value="#{$i}"]::-moz-meter-bar
    background: nth($meterbg-list,$i)

@media (min-width: 992px)
  .resetlabel
    position: absolute
    bottom: 1.2rem
    right: 1rem

#token, #profile
  [v-cloak]
    display: none
  .text-danger
    font-size: 80%

.word-break-all
  word-break: break-all

.word-break
  word-break: break-word

.overflow-wrap-break-word
  overflow-wrap: break-word

.pointer-events-none
  pointer-events: none !important

.bg-module
  background: $module-background

.is-invalid
  border: 1px solid $red !important
  &:focus, &:active
    outline: 0 !important
    outline-color: transparent !important
    outline-width: 0 !important
    outline-style: none !important
    box-shadow: 0 0 0 0 rgba(0,123,255,0) !important

input:not([type=button]):not([type=submit]):not([type=reset]):not([type=radio]):not([type=checkbox]):not([type=file]):not([type=image])
  cursor: url('../img/input-cursor.png'), auto

.no-bg-img
  background-image: none !important

.show-password
  float: right
  position: relative
  top: 32px
  right: 10px

.show-password:hover
  cursor: pointer
  color: $color-toggle-password-active

.show-password-active
  @extend .show-password
  color: $color-toggle-password-hover

.truncate-name
  white-space: nowrap
  overflow: hidden
  text-overflow: ellipsis

.truncate-token
  width: 100%
  white-space: nowrap
  overflow: hidden
  text-overflow: ellipsis

.truncate-address
  .token-address-info
    @include media-breakpoint-down(md)
      width: 230px

  span
    width: 100%
    white-space: nowrap
    overflow: hidden
    text-overflow: ellipsis

.pair-cell
  max-width: 200px

.pair-cell-trading
  max-width: 260px
  min-width: 260px

.card-fixed-small
  width: 100%
  max-width: 450px

.card-fixed-large
  width: 100%
  max-width: 981px

@include media-breakpoint-up(lg)
  .card-two-divs-fixed-large
    width: 100%
    max-width: calc(981px / 2)
  .airdrop-container
    text-align: left !important

@include media-breakpoint-down(md)
  .airdrop-container
    text-align: center !important
    font-size: 17px
    button
      margin-top: .5rem !important

@include media-breakpoint-only(xs)
  .airdrop-container
    span.message
      display: block !important

.ml-api
  @include media-breakpoint-up(sm)
    margin-left: 0

  @include media-breakpoint-up(md)
    margin-left: 15%

  @include media-breakpoint-up(lg)
    margin-left: 25%

